// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsS3StorageServiceModule UT input changes should handle bucketName change 1`] = `
"+ service/main.tf
resource "aws_s3_bucket" "bucket-changed-bucket" {
  provider = aws._123-us-east-1
  bucket = "changed-bucket"
}

- service/main.tf
resource "aws_s3_bucket" "bucket-test-bucket" {
  provider = aws._123-us-east-1
  bucket = "test-bucket"
}

+ service/outputs.tf
output "bucket-changed-bucket-Arn" {
  value = aws_s3_bucket.bucket-changed-bucket.arn
}

- service/outputs.tf
output "bucket-test-bucket-Arn" {
  value = aws_s3_bucket.bucket-test-bucket.arn
}"
`;

exports[`AwsS3StorageServiceModule UT should CUD 2`] = `"<no changes>"`;

exports[`AwsS3StorageServiceModule UT should CUD 4`] = `
"- service/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- service/main.tf
resource "aws_s3_bucket" "bucket-test-bucket" {
  provider = aws._123-us-east-1
  bucket = "test-bucket"
}

- service/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- service/outputs.tf
output "bucket-test-bucket-Arn" {
  value = aws_s3_bucket.bucket-test-bucket.arn
}

- service/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

- service/variables.tf
<empty>"
`;

exports[`AwsS3StorageServiceModule UT should CUD tags 2`] = `
"~ service/main.tf resource "aws_s3_bucket" "bucket-test-bucket" {
@@ -4,3 +4,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }"
`;

exports[`AwsS3StorageServiceModule UT should CUD tags 4`] = `
"~ service/main.tf resource "aws_s3_bucket" "bucket-test-bucket" {
@@ -3,6 +3,2 @@
    bucket = "test-bucket"
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }"
`;

exports[`AwsS3StorageServiceModule UT should handle moduleId change 1`] = `
"- service-1/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- service-1/main.tf
resource "aws_s3_bucket" "bucket-test-bucket" {
  provider = aws._123-us-east-1
  bucket = "test-bucket"
}

- service-1/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- service-1/outputs.tf
output "bucket-test-bucket-Arn" {
  value = aws_s3_bucket.bucket-test-bucket.arn
}

- service-1/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

- service-1/variables.tf
<empty>

+ service-2/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

+ service-2/main.tf
resource "aws_s3_bucket" "bucket-test-bucket" {
  provider = aws._123-us-east-1
  bucket = "test-bucket"
}

+ service-2/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

+ service-2/outputs.tf
output "bucket-test-bucket-Arn" {
  value = aws_s3_bucket.bucket-test-bucket.arn
}

+ service-2/terragrunt.hcl
remote_state {
  backend = "local"
  generate = {
    path      = "backend.tf"
    if_exists = "overwrite_terragrunt"
  }
  config = {
    path = "\${get_terragrunt_dir()}/terraform.tfstate"
  }
}

+ service-2/variables.tf
<empty>"
`;
